--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
