--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint":"eslint ."
+    "lint": "eslint ."
   },
   "author": "Alpha",
   "license": "ISC",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^8.11.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   }
 }
