--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {
     "eslint": "^8.11.0",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   },
   "jest": {
     "testEnvironment": "node"
